fix: update config

--- a/TODO
+++ b/TODO
@@ -1,31 +1,1 @@
-- Viết seo json cho từng trang, tragn home, collection, product,
-- Tham khảo :
-  https://shop.vanillapup.com/
-  https://prestige-theme-vogue.myshopify.com/products/bali-papaya-rice-masque
-
-
-TODO: update shop logo, shop social network to json ld below
-
-TODO: thêm breadcrumblist vào
-  <script type="application/ld+json">
-  {
-    "@context": "http://schema.org",
-    "@type": "BreadcrumbList",
-  "itemListElement": [{
-      "@type": "ListItem",
-      "position": 1,
-      "name": "translation missing: en.general.breadcrumb.home",
-      "item": "https://prestige-theme-vogue.myshopify.com"
-    },{
-          "@type": "ListItem",
-          "position": 2,
-          "name": "Body",
-          "item": "https://prestige-theme-vogue.myshopify.com/collections/body-1"
-        }]
-  }
-  </script>
-
-
-TODO: Tách listProductJsonLD trong SEO collection ra thành 1 snipet hay gì đó
-để có thể sử dụng nhiều lần. Như vậy, chỉ cần bổ sung đầy đủ 1 product là các json product
-ở những page khác cũgn đươc bổ sunng đầy đủ
+- Tạo Global component không cần import + chạy được ở design mode
